--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@ body, footer{
     padding: 0;
     font-family: "Poppins", sans-serif !important;
 }
+.navbar{
+    backdrop-filter: blur(5px);
+}
 .nav{
     position: absolute;
 }
