fix: carousel image size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ body{
 .nav{
     position: absolute;
 }
+.carousel-item img{
+    height: 130vh;
+    object-fit: cover;
+}
 .card img{
     height: 200px;
 }
