--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
-body{
+html body{
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif !important;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .navbar{
     backdrop-filter: blur(5px);
@@ -16,8 +18,8 @@ body{
 .card img{
     height: 200px;
 }
-textarea{
-    resize: none !important;
+.form-control{
+    resize: none;
 }
 .card-title{
     text-align: center;
