--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,31 @@ html body{
   --bs-tooltip-padding-y: 8px; /* Padding vertical */
   --bs-tooltip-font-size: 14px; /* Tamaño de la fuente */
 }
+@media (width  <= 768px) {
+  #carouselExample img {
+    max-height: 250px;
+    object-fit: cover;
+}
+.navbar{
+    backdrop-filter: none;
+}
+}
+
+@media (width  <= 768px) {
+  #carouselExample img {
+    max-height: 250px;
+    object-fit: cover;
+}
+.navbar{
+    backdrop-filter: none;
+}
+}
+@media (width  <= 992px) {
+  #carouselExample img {
+    max-height: 400px;
+    object-fit: cover;
+}
+.navbar{
+    backdrop-filter: none;
+}
+}
